# PdfRedact

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: redact_example.py
src/pdfredact/: __about__.py  __init__.py  utils.py
tests/: test_redactor.py
