[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfredact"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "JSv4", email = "scrudato@umich.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "reportlab==4.2.5",
  "Pillow==11.1.0",
  "pdf2image==1.17.0",
  "plasmapdf==0.0.1"
]

[project.urls]
Documentation = "https://github.com/JSv4/pdfredact#readme"
Issues = "https://github.com/JSv4/pdfredact/issues"
Source = "https://github.com/JSv4/pdfredact"

[tool.hatch.version]
path = "src/pdfredact/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
  "pytesseract",
  "PyPDF2"
]
[tool.hatch.envs.test.scripts]
start = "pytest {args:tests}"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pdfredact tests}"

[tool.coverage.run]
source_pkgs = ["pdfredact", "tests"]
branch = true
parallel = true
omit = [
  "src/pdfredact/__about__.py",
]

[tool.coverage.paths]
pdfredact = ["src/pdfredact", "*/pdfredact/src/pdfredact"]
tests = ["tests", "*/pdfredact/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
